--- a/index.html
+++ b/index.html
@@ -269,15 +269,23 @@
     <div class="contact-container">
         <h2 class="section-title">Let's Connect</h2>
 
-        <form name="contact" method="POST" data-netlify="true">
-            <input type="hidden" name="form-name" value="contact">
+        <form 
+    name="contact" 
+    method="POST" 
+    data-netlify="true"
+    data-netlify-honeypot="bot-field"
+    action="/success.html"
+>
+    <input type="hidden" name="form-name" value="contact">
+    <input type="hidden" name="bot-field">
 
-            <input type="text" name="name" placeholder="Full Name" required>
-            <input type="email" name="email" placeholder="Email Address" required>
-            <textarea name="message" placeholder="Message" required></textarea>
+    <input type="text" name="name" placeholder="Full Name" required>
+    <input type="email" name="email" placeholder="Email Address" required>
+    <textarea name="message" placeholder="Message" required></textarea>
 
-            <button type="submit" class="btn-cta">Send Message</button>
-        </form>
+    <button type="submit" class="btn-cta">Send Message</button>
+</form>
+
     </div>
 </section>
 
