Enable Netlify form in index.html

--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
 
     <button type="submit" class="btn-cta">Send Message</button>
 </form>
+<!-- Netlify form enabled -->
 
     </div>
 </section>
