Add Netlify form detection fallback

--- a/index.html
+++ b/index.html
@@ -294,6 +294,12 @@
 
     <footer class="footer alt-bg"><p>&copy; 2026 Furqan Ahmed | Machine Learning and beyond</p></footer>
 
+<!-- Netlify form detection fallback -->
+<form name="contact" data-netlify="true" hidden>
+  <input type="text" name="name">
+  <input type="email" name="email">
+  <textarea name="message"></textarea>
+</form>
 
 
 </body>
