--- a/index.html
+++ b/index.html
@@ -274,7 +274,9 @@
     method="POST" 
     data-netlify="true"
     data-netlify-honeypot="bot-field"
-    action="/success.html"
+    action="https://furqanahmed.netlify.app/success.html"
+>
+
 >
     <input type="hidden" name="form-name" value="contact">
     <input type="hidden" name="bot-field">
