--- a/index.html
+++ b/index.html
@@ -269,25 +269,17 @@
     <div class="contact-container">
         <h2 class="section-title">Let's Connect</h2>
 
-        <form 
-    name="contact" 
-    method="POST" 
-    data-netlify="true"
-    data-netlify-honeypot="bot-field"
-    action="https://furqanahmed.netlify.app/success.html"
->
+        <form action="https://formspree.io/f/xgozgyne" method="POST">
+  <input type="text" name="name" placeholder="Full Name" required>
+  <input type="email" name="email" placeholder="Email Address" required>
+  <textarea name="message" placeholder="Message" required></textarea>
 
->
-    <input type="hidden" name="form-name" value="contact">
-    <input type="hidden" name="bot-field">
+  <input type="hidden" name="_subject" value="New Portfolio Contact">
+  <input type="text" name="_gotcha" style="display:none">
 
-    <input type="text" name="name" placeholder="Full Name" required>
-    <input type="email" name="email" placeholder="Email Address" required>
-    <textarea name="message" placeholder="Message" required></textarea>
-
-    <button type="submit" class="btn-cta">Send Message</button>
+  <button type="submit" class="btn-cta">Send Message</button>
 </form>
-<!-- Netlify form enabled -->
+
 
     </div>
 </section>
@@ -295,13 +287,6 @@
 
 
     <footer class="footer alt-bg"><p>&copy; 2026 Furqan Ahmed | Machine Learning and beyond</p></footer>
-
-<!-- Netlify form detection fallback -->
-<form name="contact" data-netlify="true" hidden>
-  <input type="text" name="name">
-  <input type="email" name="email">
-  <textarea name="message"></textarea>
-</form>
 
 
 </body>
