--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- TEMP: prevent indexing before custom domain -->
-    <meta name="robots" content="noindex">
-
     <title>Furqan Ahmed | ML</title>
 
     <link rel="stylesheet" href="style.css">
@@ -15,13 +12,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=JetBrains+Mono&display=swap" rel="stylesheet">
 </head>
 
-
-
 <body>
 
+    <!-- NAVBAR -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">FURQAN AHMED <span class="nav-title">| Machine Learning and beyond</span></div>
+            <div class="logo">
+                FURQAN AHMED
+                <span class="nav-title">| Machine Learning and beyond</span>
+            </div>
             <div class="nav-links">
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
@@ -32,31 +31,40 @@
         </div>
     </nav>
 
-    <section id="about" class="hero">
-        <div class="hero-container">
-            <div class="hero-image">
+    <!-- ABOUT -->
+    <section id="about" class="about">
+        <div class="about-container">
+
+            <div class="about-image">
                 <img src="images/profile.png" alt="Furqan Ahmed">
             </div>
-            <div class="hero-content">
+
+            <div class="about-content">
                 <h2 class="tagline">Furqan Ahmed</h2>
+
                 <p class="summary">
                     Building practical AI systems including <span class="summary-bold"><strong>LLM</strong></span>
-                    -based <span class="summary-bold"><strong>RAG</strong></span> pipelines, 
-                    <span class="summary-bold"><strong>Agentic AI</strong></span> architectures</strong> 
-                    and end-to-end <span class="summary-bold"><strong>Machine Learning</strong></span> and 
+                    -based <span class="summary-bold"><strong>RAG</strong></span> pipelines,
+                    <span class="summary-bold"><strong>Agentic AI</strong></span> architectures
+                    and end-to-end <span class="summary-bold"><strong>Machine Learning</strong></span> and
                     <span class="summary-bold"><strong>Deep Learning</strong></span> solutions.
                     Strong foundations in <span class="summary-bold"><strong>Data Sciene</strong></span> theory combined with hands-on system design and deployment-ready projects.
                 </p>
+
                 <div class="hero-btns">
-                    <a href="https://linkedin.com/in/furqan09ahmed" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/furqan09ahmed" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
+                    <a href="https://linkedin.com/in/furqan09ahmed" target="_blank" class="social-icon">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/furqan09ahmed" target="_blank" class="social-icon">
+                        <i class="fab fa-github"></i>
+                    </a>
                 </div>
             </div>
+
         </div>
     </section>
 
-
-
+    <!-- PROJECTS -->
     <section id="projects" class="section alt-bg">
         <h2 class="section-title">Featured Projects</h2>
         <div class="project-grid">
@@ -155,6 +163,8 @@
 </div>
  </section>
 
+
+    <!-- SKILLS -->
     <section id="skills" class="section">
     <h2 class="section-title">Technical Skills</h2>
 
@@ -229,102 +239,85 @@
     </div>
 </section>
 
-
+    <!-- CERTIFICATIONS -->
     <section id="certs" class="section alt-bg">
-    <h2 class="section-title">Certifications</h2>
+        <h2 class="section-title">Certifications</h2>
 
-    <div class="certs-grid">
+        <div class="certs-grid">
 
-        <!-- Python -->
-        <div class="cert-card">
-            <a href="images/c1.jpg" target="_blank">
-                <img src="images/c1.jpg" alt="Crash Course on Python" class="cert-img">
-            </a>
-            <div class="cert-info">
-                <h3>Crash Course on Python</h3>
-                <p class="cert-issuer">Issued by <span>Google</span></p>
-                <a href="https://www.coursera.org/verify/DP3R9E8UKBDD"
-                   target="_blank" class="cert-verify">
-                    Click here to verify
+            <div class="cert-card">
+                <a href="images/c1.jpg" target="_blank">
+                    <img src="images/c1.jpg" alt="Crash Course on Python" class="cert-img">
                 </a>
+                <div class="cert-info">
+                    <h3>Crash Course on Python</h3>
+                    <p class="cert-issuer">Issued by <span>Google</span></p>
+                    <a href="https://www.coursera.org/verify/DP3R9E8UKBDD" target="_blank" class="cert-verify">
+                        Click here to verify
+                    </a>
+                </div>
             </div>
-        </div>
 
-        <!-- Machine Learning -->
-        <div class="cert-card">
-            <a href="images/c2.jpg" target="_blank">
-                <img src="images/c2.jpg" alt="Machine Learning Specialization" class="cert-img">
-            </a>
-            <div class="cert-info">
-                <h3>Machine Learning Specialization</h3>
-                <p class="cert-issuer">Issued by <span>DeepLearning.AI & Stanford</span></p>
-                <a href="https://www.coursera.org/verify/specialization/KBLMQAUDHUBR"
-                   target="_blank" class="cert-verify">
-                    Click here to verify
+            <div class="cert-card">
+                <a href="images/c2.jpg" target="_blank">
+                    <img src="images/c2.jpg" alt="Machine Learning Specialization" class="cert-img">
                 </a>
+                <div class="cert-info">
+                    <h3>Machine Learning Specialization</h3>
+                    <p class="cert-issuer">Issued by <span>DeepLearning.AI & Stanford</span></p>
+                    <a href="https://www.coursera.org/verify/specialization/KBLMQAUDHUBR" target="_blank" class="cert-verify">
+                        Click here to verify
+                    </a>
+                </div>
             </div>
-        </div>
 
-        <!-- Deep Learning -->
-        <div class="cert-card">
-            <a href="images/c3.jpg" target="_blank">
-                <img src="images/c3.jpg" alt="Deep Learning Specialization" class="cert-img">
-            </a>
-            <div class="cert-info">
-                <h3>Deep Learning Specialization</h3>
-                <p class="cert-issuer">Issued by <span>DeepLearning.AI</span></p>
-                <a href="https://www.coursera.org/verify/specialization/V3YP6K88X6Q6"
-                   target="_blank" class="cert-verify">
-                    Click here to verify
+            <div class="cert-card">
+                <a href="images/c3.jpg" target="_blank">
+                    <img src="images/c3.jpg" alt="Deep Learning Specialization" class="cert-img">
                 </a>
+                <div class="cert-info">
+                    <h3>Deep Learning Specialization</h3>
+                    <p class="cert-issuer">Issued by <span>DeepLearning.AI</span></p>
+                    <a href="https://www.coursera.org/verify/specialization/V3YP6K88X6Q6" target="_blank" class="cert-verify">
+                        Click here to verify
+                    </a>
+                </div>
             </div>
-        </div>
 
-        <!-- Mathematics -->
-        <div class="cert-card">
-            <a href="images/c4.jpg" target="_blank">
-                <img src="images/c4.jpg" alt="Mathematics for Machine Learning" class="cert-img">
-            </a>
-            <div class="cert-info">
-                <h3>Mathematics for Machine Learning</h3>
-                <p class="cert-issuer">Issued by <span>Imperial College London</span></p>
-                <a href="https://www.coursera.org/verify/specialization/YZ2XBHKNYN5U"
-                   target="_blank" class="cert-verify">
-                    Click here to verify
+            <div class="cert-card">
+                <a href="images/c4.jpg" target="_blank">
+                    <img src="images/c4.jpg" alt="Mathematics for Machine Learning" class="cert-img">
                 </a>
+                <div class="cert-info">
+                    <h3>Mathematics for Machine Learning</h3>
+                    <p class="cert-issuer">Issued by <span>Imperial College London</span></p>
+                    <a href="https://www.coursera.org/verify/specialization/YZ2XBHKNYN5U" target="_blank" class="cert-verify">
+                        Click here to verify
+                    </a>
+                </div>
             </div>
+
         </div>
+    </section>
 
-    </div>
-</section>
-
-
-
-
+    <!-- CONTACT -->
     <section id="contact" class="section">
-    <div class="contact-container">
-        <h2 class="section-title">Let's Connect</h2>
+        <div class="contact-container">
+            <h2 class="section-title">Let's Connect</h2>
 
-        <form name="contact" method="POST" data-netlify="true">
-            <input type="hidden" name="form-name" value="contact">
+            <form name="contact" method="POST" data-netlify="true">
+                <input type="hidden" name="form-name" value="contact">
+                <input type="text" name="name" placeholder="Full Name" required>
+                <input type="email" name="email" placeholder="Email Address" required>
+                <textarea name="message" placeholder="Message" required></textarea>
+                <button type="submit" class="btn-cta">Send Message</button>
+            </form>
+        </div>
+    </section>
 
-            <input type="text" name="name" placeholder="Full Name" required>
-            <input type="email" name="email" placeholder="Email Address" required>
-            <textarea name="message" placeholder="Message" required></textarea>
-
-            <button type="submit" class="btn-cta">Send Message</button>
-        </form>
-    </div>
-</section>
-
-
-
-    <footer class="footer alt-bg"><p>&copy; 2026 Furqan Ahmed | Machine Learning and beyond</p></footer>
-
-
+    <footer class="footer alt-bg">
+        <p>&copy; 2026 Furqan Ahmed | Machine Learning and beyond</p>
+    </footer>
 
 </body>
-
-
-
 </html>
